# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md
includes/glad/: glad.h
src/: glad.c  main.cpp
src/1.getting_started/1.1.hello_window/: hello_window.cpp
